--- a/jarvis/jarvis-ear/pom.xml
+++ b/jarvis/jarvis-ear/pom.xml
@@ -16,26 +16,76 @@
   <url>http://maven.apache.org</url>
 
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.0.2</version>
-        <configuration>
-          <source>1.5</source>
-          <target>1.5</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-ear-plugin</artifactId>
-        <version>2.6</version>
-        <configuration>
-            <version>5</version>
-            <defaultLibBundleDir>lib</defaultLibBundleDir>
-        </configuration>
-      </plugin>
-    </plugins>
+      
+      <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <security>
+                        <security-role>
+                            <description>Administrador</description>
+                            <role-name>GLA_ADMIN</role-name>
+                        </security-role>
+                        <security-role>
+                            <description>Usuarios que firman informes</description>
+                            <role-name>GLA_FIRMA_BACK</role-name>
+                        </security-role>
+                        <security-role>
+                            <description>Usuarios que visualizan informes</description>
+                            <role-name>GLA_FIRMA_FRONT</role-name>
+                        </security-role>
+                        <security-role>
+                            <description>Usuario</description>
+                            <role-name>GLA_USER</role-name>
+                        </security-role>
+                    </security> 
+                </configuration>
+     
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-ear-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <version>5</version>
+                    <generateApplicationXml>true</generateApplicationXml>
+                    <defaultLibBundleDir>APP-INF/lib</defaultLibBundleDir>
+                    <includeLibInApplicationXml>true</includeLibInApplicationXml>
+                    
+                    <modules> 
+                        <webModule> 
+                            <groupId>${project.groupId}</groupId> 
+                            <artifactId>jarvis-web</artifactId> 
+                            <contextRoot>/jarvis-web</contextRoot>
+                            <!--bundleFileName>mat_back.war</bundleFileName-->
+                        </webModule>
+                        <ejbModule>
+                            <groupId>${project.groupId}</groupId> 
+                            <artifactId>jarvis-ejb</artifactId> 
+                        </ejbModule>
+                    </modules> 
+               
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.3</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+      
+        
+      
+      
+   
   </build>
     <dependencies>
         <dependency>
