--- a/jarvis/pom.xml
+++ b/jarvis/pom.xml
@@ -1,14 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>es.caib.sgtsic</groupId>
-  <artifactId>jarvis</artifactId>
-  <version>1.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <name>jarvis</name>
-  <modules>
-    <module>jarvis-ear</module>
-    <module>jarvis-web</module>
-    <module>jarvis-ejb</module>
-  </modules>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>es.caib.sgtsic</groupId>
+    <artifactId>jarvis</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>jarvis</name>
+  
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.3</version>
+                <configuration>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <repositories>
+        
+        <repository>
+            <id>external</id>
+            <name>Archiva Repository Switchboard</name>
+            <layout>default</layout>
+            <url>http://gforge.caib.es/archiva/repository/internal</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+     
+        <!--repository> 
+            <id>prime-repo</id> 
+            <name>PrimeFaces Maven Repository</name> 
+            <url>http://repository.primefaces.org</url> 
+            <layout>default</layout> 
+        </repository-->
+        
+    </repositories>
+  
+  
+  
+    <modules>
+        <module>jarvis-ear</module>
+        <module>jarvis-web</module>
+        <module>jarvis-ejb</module>
+    </modules>
+  
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+  
 </project>
